--- a/newproject/src/index.css
+++ b/newproject/src/index.css
@@ -1,68 +1,67 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  background-color: black;
+  color: #fff;
+  height: 100vh;
+  width: 100%;
+  padding:30px;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.card{
+  position: relative;
+   height: 300px;
+   width: 240px;
+   border-radius: 10px;
+   padding: 10px;
+   border: 2px solid #fff;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+.card img{
+  height: 80px;
+  width: 80px;
+  object-fit: cover;
+  border-radius: 50%;
 }
-button:hover {
-  border-color: #646cff;
+.card .container{
+  padding: 5px;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.card .container p{
+  padding: 5px;
+  font-size:medium;
+  font-family: monospace;
 }
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.card .btn{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*padding: 20px;*/
+}
+.card .btn button{
+  height: 35px;
+  width: 100px;
+  text-transform: uppercase;
+  padding: 7px;
+  background-color: blue;
+  border-radius: 5px;
+  text-align: center;
+  color: #fff;
+  border: 3px solid blue;
+}
+.card .btn button:hover{
+ background-color: #fff;
+ color: blue;
+ border:none;
+ cursor: pointer;
+}
+.wrapper-cards{
+  display: flex;
+  height: 100vh;
+  width: 100%;
+  flex-wrap: wrap;
+  gap: 10px;
+  align-content: flex-start;
 }
